WIP: Bump upstreams
Adopt:
- yangtools-13.0.1
- mdsal-13.0.0-SNAPSHOT

Also adopts AbstractDOMDataBroker from mdsal-dom-spi, so that we have
less code duplication and maintenance.

JsonExportTest gets disabled because it relies on
NormalizedNode.toString(), which regressed a bit.

UTs mocking NormalizedNode are updated to ContainerNode, as mocking
sealed classes does not work with Mockito (out of the box).

Change-Id: I6d3d3c8ced297b6850aea951040d16437df9e3f0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>